infra/k8s/auth2-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth2-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth2
  template:
    metadata:
      labels:
        app: auth2
    spec:
      containers:
        - name: auth2
          image: serhii/auth2:latest
          imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  name: auth2-srv
spec:
  #type ==> default ClusterIP
  type: ClusterIP
  selector:
    app: auth2
  ports:
    - name: auth2
      protocol: TCP
      port: 3000
      targetPort: 3000
