infra/k8s/client2-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client2-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client2
  template:
    metadata:
      labels:
        app: client2
    spec:
      containers:
        - name: client
          image: serhii/client2:latest
          imagePullPolicy: Never

---
apiVersion: v1
kind: Service
metadata:
  name: client2-srv
spec:
  #type ==> default ClusterIP
  type: ClusterIP
  selector:
    app: client2
  ports:
    - name: client
      protocol: TCP
      port: 3000
      targetPort: 3000
