infra/k8s/order-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order2-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order2
  template:
    metadata:
      labels:
        app: order2
    spec:
      containers:
        - name: order2
          image: serhii/order2:latest
          imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  name: order2-srv
spec:
  #type ==> default ClusterIP
  type: ClusterIP
  selector:
    app: order2
  ports:
    - name: order2
      protocol: TCP
      port: 3000
      targetPort: 3000
