infra/k8s/ticket-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ticket2-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ticket2
  template:
    metadata:
      labels:
        app: ticket2
    spec:
      containers:
        - name: ticket2
          image: serhii/ticket2:latest
          imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  name: ticket2-srv
spec:
  #type ==> default ClusterIP
  type: ClusterIP
  selector:
    app: ticket2
  ports:
    - name: ticket2
      protocol: TCP
      port: 3000
      targetPort: 3000
