infra/k8s/ticket-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ticket2-mongo-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ticket2-mongo
  template:
    metadata:
      labels:
        app: ticket2-mongo
    spec:
      containers:
        - name: ticket2-mongo
          image: mongo

---
apiVersion: v1
kind: Service
metadata:
  name: ticket2-mongo-srv
spec:
  #type ==> default ClusterIP
  type: ClusterIP
  selector:
    app: ticket2-mongo
  ports:
    - name: ticket2-mongo-db
      protocol: TCP
      port: 27017
      targetPort: 27017
