infra/k8s/ingress-src.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: ticketing.dev
      http:
        paths:
          - path: /api/users/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: auth2-srv
                port:
                  number: 3000
          - path: /api/ticket/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: ticket2-srv
                port:
                  number: 3000
          - path: /api/order/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: order2-srv
                port:
                  number: 3000
          - path: /?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: client2-srv
                port:
                  number: 3000
          - path: /api/payments/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: payments-srv
                port:
                  number: 3000
